# pEYES

./: .gitignore  README.md  TODOs.py  playground.py  pyproject.toml  requirements.txt
analysis/: TODOs.py  playground.py  preprocess.py  run_pipeline.py  run_processing.py  sample_metrics.py  statistical_analysis.py  utils.py
analysis/_actual_analyses/: istrc_figures.py  playground.py
analysis/_article/: lund2013_rater_algorithm-params.ipynb  lund2013_rater_event-features.ipynb  lund2013_rater_label_distribution.ipynb  lund2013_rater_sample-agreement.ipynb
analysis/_article_results/: _helpers.py  figure1-single_trial_analysis.ipynb  figure3-sample_analysis.ipynb  poster1.ipynb  poster2.ipynb  remodnav_analysis.ipynb  run_processing.py
analysis/_create_figures/: istrc_figures.py  playground.py
analysis/_default_values/: _helpers.py  analysis_config.py  istrc_figures.py  msc_seminar_figures.py  preliminary_analysis.py  run_processing.py
analysis/_parameter_exploration/: _helpers.py  engbert_lambdas.py  idt_thresholds.py  idvt_thresholds.py  ivt_thresholds.py  run_processing.py
analysis/detection_stats/: WorkInProg.py
analysis/pipeline/: _unused_events_channel_.py  channel_metrics.py  full_pipeline.py  match_metrics.py  preprocess.py  sample_metrics.py  samples_channel.py
analysis/process/: _helpers.py  _unused_events_channel_.py  full_pipeline.py  match_metrics.py  preprocess.py  sample_metrics.py  samples_channel.py  temporal_alignment.py
analysis/statistical_analysis/: WorkInProg.py  sample_metrics.py
analysis/statistics/: WorkInProg.py  _helpers.py  channel_sdt.py  channel_time_diffs.py  matched_features.py  matched_sdt.py  matches_sdt.py  sample_metrics.py  samples_channel.py
docs/: 1 Basic Usage.ipynb  1_Basic.ipynb  2 Event Analysis.ipynb  2 Sample Level Evaluation.ipynb  3 Channel Evaluation.ipynb  3 Sample Level Evaluation.ipynb  4 Channel Evaluation.ipynb  4 Event Matching & Match Evaluation.ipynb  5 Event Matching & Match Evaluation.ipynb  7 Datasets.ipynb
docs/User Guide/: 1 Basic Usage.ipynb  2 Event Analysis.ipynb  3 Sample Level Evaluation.ipynb  5 Time Alignment Evaluation.ipynb  7 Datasets.ipynb
pEYES/: __init__.py
pEYES/_DataModels/: DatasetLoader.py  Detector.py  Event.py  EventLabelEnum.py  EventMatcher.py  UnparsedEventLabel.py  config.py
pEYES/_base/: create.py  match.py  parse.py  postprocess_events.py
pEYES/_utils/: constants.py  event_utils.py  metric_utils.py  pixel_utils.py  visualization_utils.py
pEYES/channel_metrics/: __init__.py  _signal_detection_metrics.py  _timing_differences.py
pEYES/datasets/: __init__.py  get_metadata.py  load_dataset.py
pEYES/event_metrics/: __init__.py  _get_features.py  _rates_and_transitions.py
pEYES/match_metrics/: __init__.py  _channel_evaluation.py  _get_features.py  _match_evaluation.py
pEYES/sample_metrics/: __init__.py  _calculate_metrics.py  _counts_and_matrices.py
pEYES/visualize/: __init__.py  _event_summary.py  _feature_over_feature.py  _feature_vs_feature.py  _features.py  _gaze.py  _scarfplot.py  _video.py
peyes/: __init__.py
peyes/_DataModels/: DatasetLoader.py  Detector.py  Event.py  EventMatcher.py  UnparsedEventLabel.py  config.py
peyes/_base/: create.py  match.py  parse.py  postprocess_events.py  (+1 more)
(+183 files in other folders)
