[project]
name = "peyes"
version = "0.0.6"
authors = [
    {name="Human Cognitive Neuroscience Lab @ HUJI", email="hcnl@mail.huji.ac.il", website="https://www.hcnl.org/"},
    {name="Jonathan Nir", email="jonathan.nir@mail.huji.ac.il"},
]
description = "A package for eye tracking data analysis and visualization"
readme = "README.md"
dependencies = [
    "numpy~=1.26.4",
    "pandas~=2.2.2",
    "scipy~=1.13.1",
    "plotly~=5.22.0",
    "opencv-python~=4.10.0.84",
    "overrides~=7.7.0",
    "requests~=2.32.3",
    "scikit-learn~=1.5.0",
    "statsmodels~=0.14.2",
    "scikit_posthocs~=0.9.0",
    "tqdm~=4.66.4",
    "python-Levenshtein~=0.25.1",
    "remodnav~=1.1.2",
    "liac-arff~=2.5.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
"Homepage" = "https://github.com/huji-hcnl/pEYES"
"Bug Tracker" = "https://github.com/huji-hcnl/pEYES/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
