[project]
name = "peyes"
version = "0.0.7"
authors = [
    {name="Human Cognitive Neuroscience Lab @ HUJI", email="hcnl@mail.huji.ac.il", website="https://www.hcnl.org/"},
    {name="Jonathan Nir", email="jonathan.nir@mail.huji.ac.il"},
]
description = "A package for eye tracking data analysis and visualization"
readme = "README.md"
dependencies = [
    "numpy~=1.26",
    "pandas~=2.2",
    "scipy~=1.13",
    "plotly~=5.22",
    "opencv-python~=4.10",
    "overrides~=7.7",
    "requests~=2.32",
    "scikit-learn~=1.5",
    "statsmodels~=0.14",
    "scikit_posthocs~=0.9",
    "tqdm~=4.66",
    "python-Levenshtein~=0.25",
    "remodnav~=1.1",
    "liac-arff~=2.4",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
"Homepage" = "https://github.com/huji-hcnl/pEYES"
"Bug Tracker" = "https://github.com/huji-hcnl/pEYES/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
