[project]
name = "peyes"
version = "0.0.9.6"
authors = [
    {name="Human Cognitive Neuroscience Lab @ HUJI", email="hcnl@mail.huji.ac.il", website="https://www.hcnl.org/"},
    {name="Jonathan Nir", email="jonathan.nir@mail.huji.ac.il"},
]
description = "A package for eye tracking data analysis and visualization"
readme = "README.md"
dependencies = [
    "numpy~=1.2",
    "pandas~=2.2",
    "scipy~=1.1",
    "plotly~=5.2",
    "opencv-python~=4.1",
    "overrides~=7.7",
    "requests~=2.32",
    "scikit-learn~=1.5",
    "statsmodels~=0.1",
    "scikit_posthocs~=0.9",
    "tqdm~=4.6",
    "python-Levenshtein~=0.2",
    "remodnav~=1.1",
    "liac-arff~=2.4",
    # "kaleido~=0.2",   # TODO: kaleido has a bug in the current version, see https://github.com/huji-hcnl/pEYES/issues/15
    "kaleido==0.1.0post1",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
"Homepage" = "https://github.com/huji-hcnl/pEYES"
"Bug Tracker" = "https://github.com/huji-hcnl/pEYES/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
